<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4ECDB"
    tools:context=".CalculadoraIMC">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insira_os_dados_abaixo"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.163"/>

    <EditText
        android:id="@+id/editTxt_Altura"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:hint="@string/insira_sua_altura_metros"
        android:textColorHint="#A9A9A9"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524"
        android:autofillHints="Altura em metros" />

    <EditText
        android:id="@+id/editTxt_Peso"
        android:layout_width="300sp"
        android:layout_height="50sp"
        android:hint="@string/insira_seu_peso_kg"
        android:textColorHint="#A9A9A9"
        android:textColor="@color/black"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.396"
        android:autofillHints="Altura em metros" />

    <Button
        android:id="@+id/btn_CalcularIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#008B44"
        android:text="@string/calcular"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <ImageButton
        android:id="@+id/imageButtonCalcImcScreen_BackToHome"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:backgroundTint="#F4ECDB"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.008"
        app:srcCompat="@drawable/ic_baseline_arrow_back_24"
        android:contentDescription="@string/bot_o_de_retorno_a_tela_inicial" />

</androidx.constraintlayout.widget.ConstraintLayout>