<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4ECDB"
    tools:context=".HomeScreen">

    <ImageView
        android:id="@+id/logoHome"
        android:layout_width="300dp"
        android:layout_height="310dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/imc_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.086"
        android:contentDescription="@string/imagem_do_aplicativo_na_tela_inicial" />

    <Button
        android:id="@+id/btn_HomeScreen"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:backgroundTint="#008B44"
        android:text="@string/calcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.714" />

    <TextView
        android:id="@+id/txtV_QuemSomos_HomeScreen"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/nossa_hist_ria"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <TextView
        android:id="@+id/txtV_FaleConosco_HomeScreen"
        android:layout_width="150sp"
        android:layout_height="30sp"
        android:text="@string/fale_conosco"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.977" />
</androidx.constraintlayout.widget.ConstraintLayout>